[gd_scene load_steps=20 format=3 uid="uid://cyggcdpo72dp"]

[ext_resource type="Script" path="res://addons/gkanban/components/CardMenu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dkeao5wdedf2q" path="res://addons/gkanban/components/CardButton.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bv1ixkoiig51m" path="res://addons/gkanban/assets/icons/png/close-line-white.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bmi4uig3jtnwq" path="res://addons/gkanban/assets/icons/png/close-line.png" id="4"]
[ext_resource type="PackedScene" uid="uid://72yeam2dkgk3" path="res://addons/gkanban/components/MenuListButton.tscn" id="5"]
[ext_resource type="FontFile" path="res://addons/gkanban/text_resources/font_bold.tres" id="6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_byiyd"]
content_margin_left = 0.0
content_margin_top = 16.0
content_margin_right = 0.0
content_margin_bottom = 24.0
bg_color = Color(0.854902, 0.886275, 0.905882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7t1pc"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.854902, 0.886275, 0.905882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvqbl"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.654902, 0.752941, 0.811765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dukxk"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.854902, 0.886275, 0.905882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_npcyr"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.654902, 0.752941, 0.811765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2v38j"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.854902, 0.886275, 0.905882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5oic"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.654902, 0.752941, 0.811765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nf827"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.854902, 0.886275, 0.905882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hx1er"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.654902, 0.752941, 0.811765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aio7j"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.854902, 0.886275, 0.905882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mx4d0"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.654902, 0.752941, 0.811765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ph04n"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.854902, 0.886275, 0.905882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lmlsg"]
resource_local_to_scene = true
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.654902, 0.752941, 0.811765, 1)

[node name="CardMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(320, 0)
layout_mode = 0
offset_right = 14.0
offset_bottom = 14.0
theme_override_styles/panel = SubResource("StyleBoxFlat_byiyd")

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BG/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BG/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15

[node name="Label" type="Label" parent="BG/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.219608, 0.247059, 0.317647, 1)
theme_override_fonts/font = ExtResource("6")
text = "CARD OPTIONS"
horizontal_alignment = 1

[node name="CloseButton" parent="BG/VBoxContainer/HBoxContainer" instance=ExtResource("2")]
layout_mode = 2
texture_normal = ExtResource("4")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("3")

[node name="MarginContainer2" type="MarginContainer" parent="BG/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 15

[node name="MarginContainer" type="MarginContainer" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 8

[node name="MoveToTopButton" parent="BG/VBoxContainer" instance=ExtResource("5")]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_7t1pc")
theme_override_styles/hover = SubResource("StyleBoxFlat_uvqbl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uvqbl")
text = "Move To Top"

[node name="MoveUpButton" parent="BG/VBoxContainer" instance=ExtResource("5")]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_dukxk")
theme_override_styles/hover = SubResource("StyleBoxFlat_npcyr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_npcyr")
text = "Move Up"

[node name="MoveDownButton" parent="BG/VBoxContainer" instance=ExtResource("5")]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2v38j")
theme_override_styles/hover = SubResource("StyleBoxFlat_e5oic")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e5oic")
text = "Move Down"

[node name="MoveToBottomButton" parent="BG/VBoxContainer" instance=ExtResource("5")]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nf827")
theme_override_styles/hover = SubResource("StyleBoxFlat_hx1er")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hx1er")
text = "Move To Bottom"

[node name="MoveToListButton" parent="BG/VBoxContainer" instance=ExtResource("5")]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_aio7j")
theme_override_styles/hover = SubResource("StyleBoxFlat_mx4d0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mx4d0")
text = "Move To List..."

[node name="DeleteCardButton" parent="BG/VBoxContainer" instance=ExtResource("5")]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ph04n")
theme_override_styles/hover = SubResource("StyleBoxFlat_lmlsg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lmlsg")
text = "Delete"

[connection signal="pressed" from="BG/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/MoveToTopButton" to="." method="_on_MoveToTopButton_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/MoveUpButton" to="." method="_on_MoveUpButton_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/MoveDownButton" to="." method="_on_MoveDownButton_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/MoveToBottomButton" to="." method="_on_MoveToBottomButton_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/MoveToListButton" to="." method="_on_MoveToListButton_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/DeleteCardButton" to="." method="_on_DeleteCardButton_pressed"]
